// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomeView > mounts 1`] = `
"<div data-v-b4e148ca="" class="home__overlay text-body-1 text-grey-lighten-5">
  <h1 data-v-b4e148ca="" class="text-h3 text-center">Let's GetFit </h1>
  <p data-v-b4e148ca="" class="mt-10">GetFit is a free exercise program planner that allows you to plan a schedule spanning multiple weeks. To get started, navigate to settings and fill some basic info. Then, go to your schedule and start planning activities. If you give your schedule a starting date, a daily agenda will appear on this screen.</p>
  <p data-v-b4e148ca="" class="mt-4">Schedules created with GetFit can be exported to .ics format, which is compatible with most email clients and calendars. You can install GetFit as a web app on your device, in which case you can work also offline. All data persists on your device, and is not sent anywhere.</p>
  <p data-v-b4e148ca="" class="mt-10"><i data-v-b4e148ca="" class="v-icon notranslate v-theme--customLight v-icon--size-default" aria-hidden="true"><svg class="v-icon__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true">
        <path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"></path>
      </svg></i><a data-v-b4e148ca="" class="text-grey-lighten-5 ml-2" target="_blank" noopener="" noreferrer="" href="https://www.github.com/ajuvonen/getfit">GitHub</a></p><button data-v-b4e148ca="" type="button" class="v-btn v-theme--customLight v-btn--density-default v-btn--size-x-small v-btn--variant-text home__photo-credit"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
    <!----><span class="v-btn__content" data-no-activator="">Photo credits</span>
    <!---->
    <!---->
  </button>
  <!---->
  <!---->
</div>"
`;

exports[`HomeView > mounts with agenda 1`] = `
"<div data-v-b4e148ca="" class="home__overlay text-body-1 text-grey-lighten-5">
  <div data-v-c4ee72cd="" class="v-progress-circular v-theme--customLight mx-auto" style="width: 150px; height: 150px;" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="NaN"><svg style="transform: rotate(calc(-90deg + 0deg));" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44.44444444444444 44.44444444444444">
      <circle class="v-progress-circular__underlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="4.444444444444445" stroke-dasharray="125.66370614359172" stroke-dashoffset="0"></circle>
      <circle class="v-progress-circular__overlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="4.444444444444445" stroke-dasharray="125.66370614359172" stroke-dashoffset="NaN"></circle>
    </svg>
    <div class="v-progress-circular__content">
      <transition-stub data-v-c4ee72cd="" name="fab-transition" mode="out-in" appear="false" persisted="false" css="true"><i data-v-c4ee72cd="" class="v-icon notranslate v-theme--customLight daily-agenda__completed-icon" style="font-size: 70px; height: 70px; width: 70px;" aria-hidden="true"><svg class="v-icon__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true">
            <path d="M18 2C17.1 2 16 3 16 4H8C8 3 6.9 2 6 2H2V11C2 12 3 13 4 13H6.2C6.6 15 7.9 16.7 11 17V19.08C8 19.54 8 22 8 22H16C16 22 16 19.54 13 19.08V17C16.1 16.7 17.4 15 17.8 13H20C21 13 22 12 22 11V2H18M6 11H4V4H6V11M16 11.5C16 13.43 15.42 15 12 15C8.59 15 8 13.43 8 11.5V6H16V11.5M20 11H18V4H20V11Z"></path>
          </svg></i></transition-stub>
    </div>
  </div>
  <h1 data-v-c4ee72cd="" class="mt-10 text-h3 text-center">Today:</h1>
  <div data-v-c4ee72cd="" class="daily-agenda has-scroll mt-10 d-flex">
    <p data-v-c4ee72cd="" class="mx-auto text-h6">No trainings. Enjoy your day off!</p>
  </div>
  <p data-v-b4e148ca="" class="mt-10"><i data-v-b4e148ca="" class="v-icon notranslate v-theme--customLight v-icon--size-default" aria-hidden="true"><svg class="v-icon__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" aria-hidden="true">
        <path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"></path>
      </svg></i><a data-v-b4e148ca="" class="text-grey-lighten-5 ml-2" target="_blank" noopener="" noreferrer="" href="https://www.github.com/ajuvonen/getfit">GitHub</a></p><button data-v-b4e148ca="" type="button" class="v-btn v-theme--customLight v-btn--density-default v-btn--size-x-small v-btn--variant-text home__photo-credit"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
    <!----><span class="v-btn__content" data-no-activator="">Photo credits</span>
    <!---->
    <!---->
  </button>
  <!---->
  <!---->
</div>"
`;
